# CombBLAS

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CombBLASbinaryIO.docx  FAQ-combblas-old.html  FAQ.md  Input_File_Formats.docx  KDT_User_Guide.doc  LICENSE  LICENSE.txt  MANIFEST.in  NERSC_INSTALL.html  README  README.md  README.txt  SEJITS_checklist.txt  TODO.txt  ToolChain.Cray  compile_commands.json  hopper.sh  hopper_compile.sh  hopper_run.sh  kdt_mpidistutils.py  python-mpi  release-notes.html  setup.py  setup_win.py  v0.1_checklist  v0.2_checklist
Applications/: .gitignore  BcastTest.cpp  BetwCent.cpp  CC.cpp  CC.h  CFEstimate.cpp  CMakeLists.txt  DirOptBFS.cpp  Driver.cpp  FastSV.cpp  FastSV.h  FilteredBFS.cpp  FilteredMIS.cpp  Incremental.cpp  MCL-gpu.cu  MCL-gpu.hip  MCL-notes.xlsx  MCL.cpp  MCL3D.cpp  Makefile_mcl_gpu-frontier  RANKS_FAQ.doc  RandomParentBFS.cpp  SingleChildBFS.cpp  SpGEMM2D.cpp  SpGEMM3D.cpp  SpMMError.cpp  TopDownBFS.cpp  TwitterEdge.h  genscripts  graph_p25_singleiter_scale21  hep-th-p4.txt  hep-th.mtx  makefile-macair  makefile-tfq  script256  script4096  tfq-cori.sh  torus.mtx
Applications/BipartiteMatchings/: ApproxWeightPerfectMatching.cpp  ApproxWeightPerfectMatching.h  BPMaximalMatching.cpp  BPMaximalMatching.h  BPMaximumMatching.cpp  BPMaximumMatching.h  CMakeLists.txt  Utility.h  auction.cpp
Applications/CarverResults/: scale24_p128_july11.run  scale24_p256_july11.run  scale26_p64_july11.run
Applications/Fall2014Runs/: edison_run_14400.e839305  edison_run_28900.e2101895  edison_run_3600.e2110364  edison_run_57600  edison_run_7056.e2110464  edison_run_td_7056.e2110467  edison_trans_28900.e2101897  edison_trans_57600
Applications/FranklinResults/: graph_p256_s26.e6886783  graph_p256_s28.e6886785  graph_p256_s29.e6886786  script1024.e6815193  script1024.e6817832  script1024.final_deg64_miniequivalent  script1024.final_mini+  script1024_ipm.fullydist  script1024_pat.e7043102  script16.debug  script1936.final_mini  script1936.final_mini+  script1936.final_small-  script256.mini-_Jan13  script256_ipm.e6824308  script256_ipm.e6827912  script256_ipm.fullydist  script4.debug  script4096.debug_Jan02  script4096.e6815194  script4096.final_deg64_miniequivalent  script4096.final_mini  script4096.final_mini+  script4096.final_small-  script4096.fullydist  script4096.fullydist_Jan02  script4096.reducedgraph_small-  script484.final_mini_ipm  script484.fullydist_Jan02  script484.mini_Jan14  script6084.final_mini  script6084.fullydist_Jan02  script6084.fullydist_Jan04  script8100.fullydist_Jan02  script8100.fullydist_Scale30
Applications/HopperResults/: script1024.16pernode  script1024.24pernode  script1024.24pernode_mini+_fullydist  script1024.24pernode_mini_fullydist  script1024.reducedgraph_mini  script1024_hop_all.mini+_Jan11  script16384.killedmini  script16384.killedsmall  script2025.24pernode_Mini_Dec23  script256.16pernode_mini_fullydist  script256.24pernode  script4096.24pernode_mini_killed_fullydist  script4096.24pernode_toy  script4096.8pernode_small_outoftime  script4096.final_small-  script529.24pernode_Feb10
Applications/IPDPS_DETERMINISTIC_RUNS/: medium_p16_double  mis_ran_scale_22_16p.txt  mis_ran_scale_22_1p.txt  mis_ran_scale_22_25p.txt  mis_ran_scale_22_36p.txt  mis_ran_scale_22_9p.txt  ran_medium_p36_notiming_august12.det  ran_scale22_p25_notiming.det  ran_scale22_p36_notiming.det  ran_scale22_p9_notiming.det  ran_scale23_p1_notiming.det  ran_scale23_p36_notiming.det  ran_scale23_p4_notiming.det  ran_scale23_p9_notiming.det  small_p16_double
Applications/Incremental/: CMakeLists.txt  Full.cpp  HipMCL.h  IncClust.h  Incremental-Baseline-Pipeline.cpp  Incremental-Baseline.cpp  Incremental-Full.cpp  Incremental-Optimized.cpp  Incremental-Pipeline-InMemory.cpp  Incremental-Pipeline.cpp  Incremental-Toy-Pipeline.cpp  Incremental-V1.cpp  Incremental-V2.cpp  Incremental.cpp  LargestCC.cpp  Main.cpp  Prep-Data-Metaclust.cpp  Prep-Data.cpp  PrepareTestSplits.cpp  Test.cpp  TestVtxShuffle.cpp  Triples2MtxNLbls.cpp  ablation-fscore.sh  fscore.sh  gen-summary.sh  inc-local.sh  inc-pipeline.sh  inc.sh  ipdps2024-experiments.csv  lcc.sh  merge-experiment-dump.py  parse_experiment_dump.py  parse_experiment_dump.sh  postproc-component-file.sh  prep-data.sh
Applications/MirasolFilteredRuns/: medium_mirasol_p36_directed  ran_huge_p36_notiming  ran_large_p36  ran_large_p36_notiming  ran_medium_p25  ran_medium_p36_notiming  ran_scale21_p16  ran_scale21_p16_nosynch  ran_scale21_p25_nosynch  ran_scale21_p36  ran_scale21_p36_nosynch  ran_scale22_p1  ran_scale22_p36_nosynch  ran_scale22_p4  ran_scale22_p9  ran_scale22_p9_nosynch  ran_scale23_p36_nosynch  ran_small_p1  ran_small_p16  ran_small_p25  ran_small_p36  small_mirasol_p36_directed
Applications/Ordering/: CMakeLists.txt  MD.cpp  Minimum_Degree-Clean.ipynb  RCM-exp.xlsx
Applications/mcl-runs/: CC.m  (+4 more)
CombBLAS/: BFSFriends.h  BetwCent.cpp  BitMap.h  BitMapCarousel.h  BitMapFringe.h  CMakeLists.txt  CMakeLists_NERSC.txt  CmakeLists.txt  CombBLAS.h  CombBLASusersSep2014.pptx  CommGrid.cpp  CommGrid.h  Compare.h  DataTypeToMPI.h  Deleter.h  DenseParMat.cpp  DenseParMat.h  DenseParVec.cpp  DenseParVec.h  DistEdgeList.cpp  DistEdgeList.h  Doxyfile  Driver.cpp  Exception.h  FAQ-combblas.html  FileHeader.h  Friends.h  FriendsCSC.h  FullyDist.h  FullyDistSpVec.cpp  FullyDistSpVec.h  FullyDistVec.cpp  FullyDistVec.h  HeapEntry.h  Isect.h  LICENSE  LocArr.h  MMmul.h  MPIOp.cpp  MPIOp.h  (+74 more)
ReleaseTests/: BlockedSpGEMM.cpp  CMakeLists.txt  FindSparse.cpp  HashSpGEMMTest.cpp  IndexingTest.cpp  InducedSubgraphsTest.cpp  KTipsTest.cpp  LocalTransposeTest.cpp  Local_SpDCCols_Transpose_Test.cpp  Mtx2Bin.cpp  MultAccuracyCUDA.cu  MultTest.cpp  MultTiming.cpp  MultTimingCUDA.cpp  MultTimingCUDA.cu  PruneColumn.cpp  ReadWriteMtx.cpp  Roofline.cpp  SpAsgnTest.cpp  SpGEMM3DTest.cpp  SpMM-gpu-sA-2D.cu  SpMM-gpu-sA.cu  SpMM-gpu-sC.cu  exectests  makefile-mac  makefile-nersc  oldcl.txt  pathtompich2  roofline_combblas_36cores  tinydict.txt
usort/: CMakeLists.txt  LICENSE  README.md  makefile
(+3906 files in other folders)
