SET(CMAKE_CXX_COMPILER mpicxx) 
SET(CMAKE_C_COMPILER mpicc) 
INCLUDE(CheckIncludeFileCXX)

cmake_minimum_required(VERSION 2.0)
PROJECT( COMBINATORIAL_BLAS )
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)

INCLUDE(TestCXXAcceptsFlag.cmake)
CHECK_CXX_ACCEPTS_FLAG("-std=c++11 -std=c++14" C14)

if (NOT C14)
       MESSAGE(FATAL_ERROR "Your compiler does not support C++14")
else (NOT C14)
	if (CMAKE_COMPILER_IS_GNUCXX)
		SET(CMAKE_CXX_FLAGS "-std=c++11 -std=c++14 -fopenmp -DNDEBUG -w -DGRAPH_GENERATOR_SEQ -O2 -DMPICH_IGNORE_CXX_SEEK")
		SET(CMAKE_C_FLAGS "-DNDEBUG -Drestrict=__restrict__ -w -DGRAPH_GENERATOR_SEQ -O2 -DMPICH_IGNORE_CXX_SEEK")
	else (CMAKE_COMPILER_IS_GNUCXX)
		CHECK_CXX_ACCEPTS_FLAG(-std=c++0x C0X)
		if (C0X) 
			SET(CMAKE_CXX_FLAGS "-std=c++0x -std=c++11 -std=c++14 -fopenmp -DNOTGNU -DNDEBUG -w -DGRAPH_GENERATOR_SEQ -O2 -DMPICH_IGNORE_CXX_SEEK")
			SET(CMAKE_C_FLAGS "-DNOTGNU -DNDEBUG -Drestrict=__restrict__ -w -DGRAPH_GENERATOR_SEQ -O2 -DMPICH_IGNORE_CXX_SEEK")
		else (C0X)
			SET(CMAKE_CXX_FLAGS "-std=c++11 -std=c++14 -DNOTGNU -fopenmp -DNDEBUG -w -DGRAPH_GENERATOR_SEQ -O2 -DMPICH_IGNORE_CXX_SEEK")
			SET(CMAKE_C_FLAGS "-DNOTGNU -DNDEBUG -Drestrict=__restrict__ -w -DGRAPH_GENERATOR_SEQ -O2 -DMPICH_IGNORE_CXX_SEEK")
		endif (C0X)
	endif (CMAKE_COMPILER_IS_GNUCXX)
endif (NOT C14)

ADD_LIBRARY( CommGridlib CommGrid.cpp  )
ADD_LIBRARY( MPITypelib MPIType.cpp )
ADD_LIBRARY( MemoryPoollib MemoryPool.cpp )
ADD_LIBRARY( Hashlib hash.cpp )


ADD_SUBDIRECTORY( ReleaseTests )
ADD_SUBDIRECTORY( Applications ) 
ADD_SUBDIRECTORY( graph500-1.2/generator )


ENABLE_TESTING()
INCLUDE(CTest)
ADD_TEST( Multiplication_Test mpirun -np 4 ./ReleaseTests/MultTest TESTDATA/rmat_scale16_A.txt TESTDATA/rmat_scale16_B.txt TESTDATA/rmat_scale16_productAB.txt TESTDATA/x_65536_halfdense.txt TESTDATA/y_65536_halfdense.txt )
ADD_TEST( Reduction_Test mpirun -np 4 ./ReleaseTests/ReduceTest TESTDATA/sprand10000 TESTDATA/sprand10000_sumcols TESTDATA/sprand10000_sumrows)
ADD_TEST( Iterator_Test mpirun -np 4 ./ReleaseTests/IteratorTest TESTDATA sprand10000)
ADD_TEST( Transpose_Test mpirun -np 4 ./ReleaseTests/TransposeTest TESTDATA betwinput_scale16 betwinput_transposed_scale16)
ADD_TEST( Indexing_Test mpirun -np 4 ./ReleaseTests/IndexingTest TESTDATA B_100x100.txt B_10x30_Indexed.txt rand10outta100.txt rand30outta100.txt)
ADD_TEST( SpAsgn_Test mpirun -np 4 ./ReleaseTests/SpAsgnTest TESTDATA A_100x100.txt A_with20x30hole.txt dense_20x30matrix.txt A_wdenseblocks.txt 20outta100.txt 30outta100.txt)
ADD_TEST( GalerkinNew_Test mpirun -np 4 ./ReleaseTests/GalerkinNew TESTDATA/grid3d_k5.txt TESTDATA/offdiag_grid3d_k5.txt TESTDATA/diag_grid3d_k5.txt TESTDATA/restrict_T_grid3d_k5.txt)
ADD_TEST( FindSparse_Test mpirun -np 4 ./ReleaseTests/FindSparse TESTDATA findmatrix.txt)
ADD_TEST( BetwCent_Test mpirun -np 4 ./Applications/betwcent TESTDATA/SCALE16BTW-TRANSBOOL/ 10 96 )
ADD_TEST( TopDownBFS_Test mpirun -np 4 ./Applications/tdbfs Force 17 FastGen)
ADD_TEST( DirOptBFS_Test mpirun -np 4 ./Applications/dobfs 17 )
ADD_TEST( FBFS_Test mpirun -np 4 ./Applications/fbfs Gen 16 )
ADD_TEST( FMIS_Test mpirun -np 4 ./Applications/fmis 17 )
